sf-metadata/force-app/main/default/objects/Stripe_Quote__c/Stripe_Quote__c.object-meta.xml
<CustomObject>
    <label>Stripe Quote</label>
    <nameField>
        <displayFormat>SQ-{0000}</displayFormat>
        <label>Stripe Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>