sf-metadata/force-app/main/default/objects/Stripe_Quote__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stripe Quotes</relationshipLabel>
    <relationshipName>Stripe_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>