sf-metadata/force-app/main/default/objects/Stripe_Quote__c/fields/Collection_Method__c.field-meta.xml
<CustomField>
    <fullName>Collection_Method__c</fullName>
    <label>Collection Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>