sf-metadata/force-app/main/default/objects/Stripe_Quote__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Stripe Quotes</relationshipLabel>
    <relationshipName>Stripe_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>