sf-metadata/force-app/main/default/objects/Stripe_Quote__c/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <label>Creator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>