sf-metadata/force-app/main/default/objects/Stripe_Quote__c/fields/Currency_ISO__c.field-meta.xml
<CustomField>
    <fullName>Currency_ISO__c</fullName>
    <label>Currency ISO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>