sf-metadata/force-app/main/default/objects/Stripe_Quote__c/fields/Is_Payment_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Payment Done</label>
    <type>Checkbox</type>
</CustomField>