sf-metadata/force-app/main/default/objects/Stripe_Quote__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Stripe Quotes</relationshipLabel>
    <relationshipName>Stripe_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>