sf-metadata/force-app/main/default/objects/Stripe_Quote__c/fields/PandaDoc_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>PandaDoc_Document_ID__c</fullName>
    <label>PandaDoc Document ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>