sf-metadata/force-app/main/default/objects/Stripe_Quote__c/fields/Stripe_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_ID__c</fullName>
    <label>Stripe Customer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>