sf-metadata/force-app/main/default/objects/Stripe_Quote__c/fields/Stripe_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Quote_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Stripe Quote ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>