sf-metadata/force-app/main/default/objects/Stripe_Quote__c/fields/Stripe_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_ID__c</fullName>
    <label>Stripe Subscription ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>